[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "get-transaction-receipt"
dynamic = ["version"]
description = "Multi-chain transaction receipt fetcher (EVM + BTC + Solana + Tron + more) with GetBlock fallback"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["blockchain", "rpc", "ethereum", "solana", "bitcoin", "tron", "getblock"]
authors = [
  {name = "Meysam Zandy", email = "zandy.meysam@gmail.com"},
]

dependencies = [
    "httpx >= 0.27.0",
]

[project.urls]
Homepage = "https://github.com/meysamzandy/get_transaction_receipt"
Repository = "https://github.com/meysamzandy/get_transaction_receipt"

[tool.hatch.version]
path = "src/get_transaction_receipt/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/get_transaction_receipt"]